# advent2021

./: .gitignore  Cargo.toml
benches/: benchmark.rs
src/: bin.rs  lib.rs  p1.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p17.rs  p18.rs  p2.rs  p3.rs  p4.rs  p5.rs  p6.rs  p7.rs  p8.rs  p9.rs
