[package]
name = "advent2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advent2021"
path = "src/lib.rs"

[[bin]]
name = "advent-runner"
path = "src/bin.rs"

[dependencies]
anyhow = "1"
petgraph = "0.6.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
